syntax = "proto3";

option java_multiple_files = true;
option java_package = "CameraController";
option java_outer_classname = "CameraControlsImpl";

service Service2 {
  //Takes in direction controls and moves the currently selected camera
  rpc cameraAdjustment(CameraAdjustmentRequest) returns (CameraAdjustmentResponse) {}

  //When motion is detected on the camera not in use, the user is notified
  rpc motionDetected(Empty) returns (MotionDetectedResponse) {}

  //When motion is detected on the camera not in use, the camera autonomously moves to the location of the motion
  rpc cameraAutomation(stream CameraAutomationRequest) returns (stream CameraAutomationResponse) {}
}

message CameraAdjustmentRequest {
  string cameraID = 1;

  string cameraPosition = 2;

  enum CameraDirection {
    UP = 0;
    DOWN = 1;
    LEFT = 2;
    RIGHT = 3;
  }
  CameraDirection cameraDirection = 3;
}

message CameraAdjustmentResponse {
  string cameraPosition = 1;
}

message Empty {

}

message MotionDetectedResponse {
  string detectionAlert = 1;
}

message CameraAutomationRequest {
  string automatedCameraID = 1;

  string cameraPosition = 2;

  string locationOfMovement = 3;
}

message CameraAutomationResponse {
  string cameraAutomation = 1;
}